--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,11 @@
-spring:
-  application:
-    name: CONFIG-GITHUB
+# spring:
+#   application:
+#     name: CONFIG-GITHUB
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
